--- a/templates/customers_signup.html
+++ b/templates/customers_signup.html
@@ -13,14 +13,14 @@
   <!-- Navbar -->
   <header class="signup-header">
     <div class="navbar">
-      <a href="home.html" class="logo-link">
+      <a href="/" class="logo-link">
         <img src="../static/images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Customer</span>
       </a>
       <nav class="nav-right">
         <ul>
-          <li><a href="home.html" class="nav-link">Home</a></li>
-          <li><a href="customer_login.html" class="nav-link">Login</a></li>
+          <li><a href="/" class="nav-link">Home</a></li>
+          <li><a href="/customer_login" class="nav-link">Login</a></li>
         </ul>
       </nav>
     </div>
