--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -13,13 +13,13 @@
   <!-- Navbar -->
   <header class="login-header">
     <div class="navbar">
-      <a href="home.html" class="logo-link">
+      <a href="/" class="logo-link">
         <img src="../static/images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Kitchen</span>
       </a>
       <nav>
         <ul>
-          <li><a href="home.html" class="nav-link">Home</a></li>
+          <li><a href="/" class="nav-link">Home</a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +43,7 @@
         <input type="password" id="password" placeholder="Enter your password" required>
       </div>
       <button type="submit" class="btn">Login</button>
-      <p class="small-text">Don't have an account? <a href="customers_signup.html" id="switchToSignup">Sign Up</a></p>
+      <p class="small-text">Don't have an account? <a href="/customers_signup" id="switchToSignup">Sign Up</a></p>
     </form>
   </div>
 <script src="../static/js/login.js"></script>
