Fixed route for navbar for Home & Menu and also link the routes for rest of menu items on that pages

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <!-- Header - EXACT COPY FROM YOUR SPECIFICATION -->
+  <!-- Header -->
   <header class="site-header">
     <div class="logo">
       <a href="/">
