Updated few navbar items for finnish & also made required changes in translation.js

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         <li><a data-i18n="nav_menu" href="/menu">Menu</a></li>
         <li><a data-i18n="nav_reservation" href="/reservation">Table Reservation</a></li>
         <li><a data-i18n="nav_contact" href="/contact">Contact</a></li>
-        <li><a data-i18n="nav_findus" href="find-us.html">Find Us</a></li>
+        <li><a data-i18n="nav_findus" href="/find-us">Find Us</a></li>
 
         <!-- Dropdown -->
         <li class="dropdown">
