Linked to loginpage in cutomer signup page.

--- a/templates/customers_signup.html
+++ b/templates/customers_signup.html
@@ -65,7 +65,7 @@
         </div>
 
         <button type="submit" class="signup-btn">Create Account</button>
-        <p class="switch-text">Already have an account? <a href="customer_login.html">Login here</a></p>
+        <p class="switch-text">Already have an account? <a href="/customer_login">Login here</a></p>
       </form>
     </div>
   </div>
